--- a/2025-09-11/my-app/src/App.css
+++ b/2025-09-11/my-app/src/App.css
@@ -40,3 +40,15 @@
 .read-the-docs {
   color: #888;
 }
+
+.buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+button {
+  padding: 10px 20px;
+}
